tests/errors/compiler/wrong_param_list/;_in_list_of_args.c
int func(int a; int b)
{
	return 0;
}

void main()
{

}
